# code-camp-team1

./: .gitignore  README.md  commands.py  commands_ala.py  commands_alois.py  core.py  options.py  pyproject.toml  tasks.txt
src/: commands.py  commands_ala.py  commands_alois.py  commands_thomas.py  main.py  options.py
tests/: test_commands.py
